fix mozilla scrollbar

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -22,18 +22,23 @@ a {
   text-decoration: none;
 }
 
-::-webkit-scrollbar {
-  width: 4px;
-  height: 0;
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $color-secondary-grey transparent;
 }
 
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
   background: transparent;
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: $color-secondary-grey;
   border-radius: 20px;
+  border: transparent;
 }
 
 ::-webkit-scrollbar-thumb:hover {
